# pagetally

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  OVERVIEW.md  README.md  SECURITY.md
.github/workflows/: ci.yml
client/: package-lock.json  package.json  tsup.config.ts
client/src/: auto.ts  clicks.ts  collect.ts  engagement.ts  index.ts  payload.ts  performance.ts  privacy.ts  scroll.ts  transport.ts  types.ts
client/test/: analytics.test.ts  auto.test.ts  engagement.test.ts  payload.test.ts  privacy.test.ts  scroll.test.ts
deploy/: Caddyfile  gen-dashboard-creds.sh  install.sh  pagetally.env.example  pagetally.service
e2e/: README.md  package-lock.json  package.json  playwright.config.ts  run-server.sh
e2e/tests/: collect.spec.ts
examples/: script-tag.html
scripts/: loadtest.sh
server/: .env.example  Cargo.toml  Dockerfile  README.md  build.rs
server/src/: blog.rs  config.rs  contact.rs  db.rs  email.rs  ingest.rs  lib.rs  main.rs  salt.rs  state.rs  stats.rs  types.rs
server/tests/: api.rs  blog.rs  contract.rs  script.rs
